Fixed the font-size which were too small to read

--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ section.first>div :nth-child(2) {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.4s ease;
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 1.5;
   margin-top: 10px;
 }
